[tool.poetry]
name = "matching-webapp"
version = "0.1.0"
description = ""
authors = ["mochi22 <jdhdbemd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
